# imutum_python_hdf

./: README.md  _reader.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-test-pypi.yml
src/mtmhdf/: __init__.py  _hdf5.py  reader.py
tests/: test.py  test_grid2dreader.py  test_grid_modis_sin.py  test_slice.py
